# hydro-iot

./: .gitignore  README.md  config.example.conf  config.example.hocon  conftest.py  main.py  pyproject.toml
hydro_app/: gauge.kv  gauge.py  hydro.kv  main.py
hydro_iot/: __main__.py
hydro_iot/controller/: config.py  service.py
hydro_iot/controller/interface/: scheduler.py
hydro_iot/domain/: conductivity.py  config.py  ph.py  pressure.py  system_state.py  temperature.py  timing.py
hydro_iot/external_interface/: config.py  dummy_message_queue.py  rabbitmq_gateway.py  scheduler.py
hydro_iot/gateway/: sensor_gateway.py
hydro_iot/infrastructure/: config.py  dummy_message_queue.py  event_queue.py  logging.py  picamera_gateway.py  pump_gateway.py  rabbitmq_gateway.py  scheduler.py  sensor_gateway.py  spray_gateway.py
hydro_iot/infrastructure/adc/: ADS1263.py  config.py  main.py  readme_rpi_CN.txt
hydro_iot/services/: adjust_nutrient_solution.py  command_event_subscriber.py  empty_tank.py  get_ndvi.py  increase_pressure.py  read_ph_ec.py  read_pressure.py  read_temperature.py  spray_boxes.py
hydro_iot/services/ports/: camera_gateway.py  event_queue.py  logging.py  message_queue.py  pump_gateway.py  sensors_gateway.py  spray_gateway.py
hydro_iot/usecase/: read_temperature.py
hydro_iot/usecase/interface/: message_queue.py  sensors_gateway.py
hydro_server/: server.py
tests/unittests/fixtures/: config.py  sensor_gateway.py
tests/unittests/services/: test_read_ph_ec.py
