[tool.poetry]
name = "hydro-iot"
version = "0.1.0"
description = "Software for raspi on hydroponics"
authors = ["Ralf Grubenmann <ralf.grubenmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"RPi.GPIO" = {version = "^0.7.0", allow-prereleases = true}
APScheduler = "^3.8.1"
python-systemd = "^0.0.9"
Inject = "^4.3.1"
dataconf = "^1.2.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
