[tool.poetry]
name = "hydro-iot"
version = "0.1.0"
description = "Software for raspi on hydroponics"
authors = ["Ralf Grubenmann <ralf.grubenmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"RPi.GPIO" = {version = "^0.7.0", allow-prereleases = true}
APScheduler = "^3.8.1"
python-systemd = "^0.0.9"
Inject = "^4.3.1"
dataconf = "^1.2.0"
pi1wire = "^0.2.0"
pika = "^1.2.0"
python-dotenv = "^0.19.2"
cysystemd = "^1.5.2"

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
pytest = "^7.0.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120
