[tool.poetry]
name = "hydro-iot"
version = "0.1.0"
description = "Software for raspi on hydroponics"
authors = ["Ralf Grubenmann <ralf.grubenmann@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
"RPi.GPIO" = {version = "^0.7.0", allow-prereleases = true, optional=true}
APScheduler = {version="^3.8.1", optional=true}
python-systemd = "^0.0.9"
Inject = "^4.3.1"
dataconf = "^1.2.0"
pi1wire = {version="^0.2.0", optional=true}
pika = {version="^1.2.0", optional=true}
python-dotenv = "^0.19.2"
cysystemd = "^1.5.2"
spidev = {version="^3.5", optional=true}
janus = {version="^1.0.0", optional=true}
Kivy = {extras = ["base"], version = "^2.0.0", optional=true}
psycopg2 = {version="^2.9.3", optional=true}
picamera = {version = "^1.13", optional = true}
numpy = {version = "^1.22.2", optional = true}
Pillow = {version = "^9.0.1", optional = true}

[tool.poetry.dev-dependencies]
pre-commit = "^2.16.0"
pytest = "^7.0.0"
black = "^22.1.0"
pytest-mock = "^3.7.0"
pytest-black = "^0.3.12"
buildozer = "^1.2.0"
Cython = "^0.29.28"

[tool.poetry.extras]
rpi = ["RPi.GPIO", "APScheduler", "pi1wire", "spidev", "picamera", "numpy", "Pillow"]
app = ["janus", "Kivy"]
server = ["psycopg2"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.pytest.ini_options]
addopts = "--black"
testpaths = ["tests"]

[tool.poetry.scripts]
iot = "hydro_iot.__main__:main"
server = "hydro_server.server:main"
app = "hydro_app.main:main"
